--- a/assets/src/scss/partials/_main.scss
+++ b/assets/src/scss/partials/_main.scss
@@ -73,8 +73,7 @@ html {
 
 }
 
-.page-template-page-gallery,
-.page-template-default {
+.page-template-page-gallery {
 	header {
 		background-color: #0f1832;
 	}
@@ -229,33 +228,5 @@ html {
 
 	.selected-flag {
 		background-color: transparent !important;
-		padding-left: 0 !important;
-		color: #0f1832 !important;
 	}
-}
-
-
-.page-template-default {
-
-	h1,
-	h2,
-	h3,
-	h4,
-	p,
-	ul {
-		margin: 20px;
-	}
-
-	ul {
-		list-style-position: inside;
-		/* Move the bullet inside the list item */
-	}
-
-	li {
-		margin: 10px;
-	}
-}
-
-.section--default {
-	margin-top: 180px;
 }
