--- a/assets/src/scss/partials/_single_crew.scss
+++ b/assets/src/scss/partials/_single_crew.scss
@@ -14,9 +14,9 @@
    }
 
    &__left {
-      flex-basis: 743px;
-      max-width: 743px;
-      margin: 0 auto;
+      // flex-basis: 743px;
+      // max-width: 743px;
+      // margin: 0 auto;
    }
 
    &__right {
