--- a/assets/src/scss/partials/_about_us.scss
+++ b/assets/src/scss/partials/_about_us.scss
@@ -64,10 +64,10 @@
 // Crew Section
 
 .section--crew {
-   padding: 115px 0 160px;
+   padding: 75px 0 160px;
 
    @media only screen and (max-width: $max-md) {
-      padding: 60px 0 60px;
+      padding: 40px 0 60px;
    }
 }
 
@@ -105,6 +105,16 @@
       @media only screen and (max-width: $max-md) {
          text-align: center;
       }
+
+      h3 {
+         margin-bottom: 5px;
+         font-size: 16px;
+         line-height: 1;
+         color: rgba(15, 24, 50, 0.7);
+   
+      }
+
+
       h2 {
          font-size: 56px;
          line-height: 1.1;
