--- a/assets/src/scss/partials/_elements.scss
+++ b/assets/src/scss/partials/_elements.scss
@@ -10,22 +10,27 @@
     &__full {
         height: 100vh;
     }
+    &.no-shadow{
+        &:after {
+            display: none;
+        }    
+    }
 
-    // &:after {
-    //     content: "";
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-color: rgba(0, 0, 0, 0.4);
-    //     z-index: 0;
-    // }
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+        z-index: 0;
+    }
 
-    // >* {
-    //     position: relative;
-    //     z-index: 2;
-    // }
+    >* {
+        position: relative;
+        z-index: 2;
+    }
 }
 
 .arrow-down {
@@ -46,7 +51,6 @@
     color: #0f1832;
     cursor: pointer;
     transition: 0.3s ease-in-out;
-
     &--blue {
         background-color: #0f1832;
         color: #fff;
@@ -78,7 +82,7 @@
         align-items: center;
         justify-content: center;
         gap: 30px;
-        font-size: 12px;
+        font-size: 16px;
         line-height: 1;
 
     }
