--- a/assets/src/scss/partials/_footer.scss
+++ b/assets/src/scss/partials/_footer.scss
@@ -52,13 +52,36 @@
       padding: 50px 0;
       text-align: center;
       color: #ffffff;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 25px;
 
       @media only screen and (max-width: $max-md) {
          padding: 25px 0;
+         flex-direction: column;
       }
 
    }
-
+   &--logo {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-right: auto;
+      @media only screen and (max-width: $max-md) {
+         margin-right: 0;
+      }
+      img {
+         max-width: 32px;
+      }
+   }
+   &--txt{
+      margin-right: auto;
+      @media only screen and (max-width: $max-md) {
+         margin-right: 0;
+      }
+   }
    &__copyright {
       letter-spacing: 1px;
       font-size: 10px;
@@ -242,7 +265,7 @@
 
       @media only screen and (max-width: $max-xl) {
          br {
-            display: none;
+            // display: none;
          }
       }
    }
