--- a/assets/src/scss/partials/_header.scss
+++ b/assets/src/scss/partials/_header.scss
@@ -49,8 +49,8 @@
    }
 
    &__center {
-      flex-basis: 560px;
-      max-width: 560px;
+      flex-basis: 615px;
+      max-width: 615px;
 
       @media only screen and (max-width: $max-lg) {
          flex-basis: 100%;
@@ -68,12 +68,13 @@
       &.active {
          transform: translateX(1024px);
 
-         .btn {
-            display: block;
+         button-widget {
+            display: flex;
+            justify-content: center;
          }
       }
 
-      .btn {
+      button-widget {
          display: none;
       }
    }
@@ -183,4 +184,3 @@
       }
    }
 }
-
