--- a/assets/src/scss/core.scss
+++ b/assets/src/scss/core.scss
@@ -45,4 +45,5 @@
 @import "partials/homepage";
 @import "partials/about_us";
 @import "partials/single_crew";
+@import "partials/faq";
 @import "partials/footer";
