--- a/assets/src/scss/partials/_main.scss
+++ b/assets/src/scss/partials/_main.scss
@@ -77,7 +77,7 @@ html {
 }
 
 .page-template-page-gallery,
-.page-template-default {
+.page-template-default,.page-template-page-faq {
 	header {
 		background-color: #0f1832;
 	}
