--- a/assets/src/scss/core.scss
+++ b/assets/src/scss/core.scss
@@ -45,5 +45,6 @@
 @import "partials/homepage";
 @import "partials/about_us";
 @import "partials/single_crew";
+@import "partials/single";
 @import "partials/faq";
 @import "partials/footer";
