--- a/assets/src/scss/modules/_vars.scss
+++ b/assets/src/scss/modules/_vars.scss
@@ -159,3 +159,8 @@ $breakpoints: (
 		--container-pad: 20px;
 	}
 }
+
+$color-primary: #0f1832; // Primary color
+$color-secondary: #ffffff; // Secondary color
+$color-text: #333333; // Text color
+$color-border: #dddddd; // Border color
